--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Plan/Index.cshtml
@@ -194,6 +194,22 @@
 
                                         }
                                     }
+                                    else if (lType == 65)
+                                    {
+                                        int a = int.Parse(numArr[0]);
+                                        int b = int.Parse(numArr[1]);
+                                        int c = int.Parse(numArr[2]);
+                                        int sum = a + b + c;
+
+
+                                        <span class="hdM_spssc HYJP_Red">@numArr[0]</span>
+                                                <span class="hdM_spssc HYJP_PcHao">+</span>
+                                                <span class="hdM_spssc HYJP_Red">@numArr[1]</span>
+                                                <span class="hdM_spssc HYJP_PcHao">+</span>
+                                                <span class="hdM_spssc HYJP_Red">@numArr[2]</span>
+                                                <span class="hdM_spssc HYJP_PcHao">=</span>
+                                                <span class="hdM_spssc HYJP_Red">@sum</span>
+                                    }
                                     else
                                     {
                                         int i = -1;
@@ -239,13 +255,14 @@
                                                     <span class="hdM_spssc HYJP_Red">@s</span>
                                                 }
                                             }
+                                            
                                             else
                                             {
                                                 <span class="hdM_spssc HYJP_Red">@s</span>
                                         }
 
                                     }
-                                    }
+                                  }
 
 
                                 }
