--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsList.cshtml
@@ -1,15 +1,375 @@
 ﻿@using C8.Lottery.Model;
 @{
     var newsList = ViewBag.NewsList as List<News>;
+    var adList = ViewBag.AdList as List<Advertisement>;
+    var PageIndex = ViewBag.PageIndex;
 }
-
 
 @if (newsList != null)
 {
+
+    int i = 0;
     foreach (var newse in newsList)
     {
-        <div class="hjc_news_content">
+        i++;
+        if (PageIndex == 1)
+        {
+            if (adList != null)
+            {
+                foreach (var ad in adList)
+                {
 
+                    if (ad.Layer == 3 && i == 1)
+                    {
+                        <div class="GG_Box">
+                            @if (ad.ThumbList.Count < 1 || ad.ThumbStyle == 0)
+                            {
+                                //无图
+                                <a href="@ad.TransferUrl">
+                                    <h3 class="GG_B1Tit">@ad.Title</h3>
+                                    <div class="GG_BbtFont">
+                                        <b>广告</b>
+                                        <span>@ad.Company</span>
+                                    </div>
+                                </a>
+                            }
+                            else if (ad.ThumbStyle == 1)
+                            {
+                                //一张小图
+                                <a href="@ad.TransferUrl">
+                                    <div class="GG_B2Left f-l">
+                                        <h3 class="GG_B1Tit">@ad.Title</h3>
+                                        <div class="GG_BbtFont">
+                                            <b>广告</b>
+                                            <span>@ad.Company</span>
+                                        </div>
+                                    </div>
+                                    <div class="GG_B2Right">
+                                        @if (ad.ThumbList.Count > 0)
+                                        {
+                                            <img src="@ad.ThumbList[0]" alt="@ad.Title" />
+                                        }
+
+                                    </div>
+                                </a>
+                            }
+                            else if (ad.ThumbStyle == 2)
+                            {
+                                //一张大图
+                                <a href="@ad.TransferUrl">
+                                    <h3 class="GG_B1Tit">@ad.Title</h3>
+                                    <div class="GG_B4Tu">
+                                        @if (ad.ThumbList.Count > 0)
+                                        {
+                                            <img src="@ad.ThumbList[0]" alt="@ad.Title" />
+                                        }
+
+                                    </div>
+                                    <div class="GG_BbtFont">
+                                        <b>广告</b>
+                                        <span>@ad.Company</span>
+                                    </div>
+                                </a>
+                            }
+                            else if (ad.ThumbStyle == 3)
+                            {
+                                <a href="@ad.TransferUrl">
+                                    <h3 class="GG_B1Tit">@ad.Title</h3>
+                                    <ul class="GG_B3Tu">
+                                        @foreach (var thumb in ad.ThumbList)
+                                        {
+                                            <li><img src="@thumb" alt="@ad.Title" /></li>
+                                        }
+
+                                        <div style="clear:both;"></div>
+                                    </ul>
+
+                                    <div class="GG_BbtFont">
+                                        <b>广告</b>
+                                        <span>@ad.Company</span>
+                                    </div>
+                                </a>
+                            }
+                            else if (ad.ThumbStyle == 4)
+                            {
+                                <a href="@ad.TransferUrl">
+                                    @if (ad.ThumbList.Count > 0)
+                                        {
+                                        <img src="@ad.ThumbList[0]" class="GG_B5Tu">
+                                    }
+
+                                </a>
+
+                            }
+
+                        </div>
+
+                    }
+                    else if (ad.Layer == 4 && i == 2)
+                    {
+
+                        <div class="GG_Box">
+                            @if (ad.ThumbList.Count < 1 || ad.ThumbStyle == 0)
+                            {
+                                //无图
+                                <a href="@ad.TransferUrl">
+                                    <h3 class="GG_B1Tit">@ad.Title</h3>
+                                    <div class="GG_BbtFont">
+                                        <b>广告</b>
+                                        <span>@ad.Company</span>
+                                    </div>
+                                </a>
+                            }
+                            else if (ad.ThumbStyle == 1)
+                            {
+                                //一张小图
+                                <a href="@ad.TransferUrl">
+                                    <div class="GG_B2Left f-l">
+                                        <h3 class="GG_B1Tit">@ad.Title</h3>
+                                        <div class="GG_BbtFont">
+                                            <b>广告</b>
+                                            <span>@ad.Company</span>
+                                        </div>
+                                    </div>
+                                    <div class="GG_B2Right">
+                                        @if (ad.ThumbList.Count > 0)
+                                        {
+                                            <img src="@ad.ThumbList[0]" alt="@ad.Title" />
+                                        }
+
+                                    </div>
+                                </a>
+                            }
+                            else if (ad.ThumbStyle == 2)
+                            {
+                                //一张大图
+                                <a href="@ad.TransferUrl">
+                                    <h3 class="GG_B1Tit">@ad.Title</h3>
+                                    <div class="GG_B4Tu">
+                                        @if (ad.ThumbList.Count > 0)
+                                        {
+                                            <img src="@ad.ThumbList[0]" alt="@ad.Title" />
+                                        }
+
+                                    </div>
+                                    <div class="GG_BbtFont">
+                                        <b>广告</b>
+                                        <span>@ad.Company</span>
+                                    </div>
+                                </a>
+                            }
+                            else if (ad.ThumbStyle == 3)
+                            {
+                                <a href="@ad.TransferUrl">
+                                    <h3 class="GG_B1Tit">@ad.Title</h3>
+                                    <ul class="GG_B3Tu">
+                                        @foreach (var thumb in ad.ThumbList)
+                                        {
+                                            <li><img src="@thumb" alt="@ad.Title" /></li>
+                                        }
+
+                                        <div style="clear:both;"></div>
+                                    </ul>
+
+                                    <div class="GG_BbtFont">
+                                        <b>广告</b>
+                                        <span>@ad.Company</span>
+                                    </div>
+                                </a>
+                            }
+                            else if (ad.ThumbStyle == 4)
+                            {
+                                <a href="@ad.TransferUrl">
+                                    @if (ad.ThumbList.Count > 0)
+                                        {
+                                        <img src="@ad.ThumbList[0]" class="GG_B5Tu">
+                                    }
+
+                                </a>
+
+                            }
+
+                        </div>
+
+
+                    }
+                    else if (ad.Layer == 5 && i == 3)
+                    {
+                        <div class="GG_Box">
+                            @if (ad.ThumbList.Count < 1 || ad.ThumbStyle == 0)
+                            {
+                                //无图
+                                <a href="@ad.TransferUrl">
+                                    <h3 class="GG_B1Tit">@ad.Title</h3>
+                                    <div class="GG_BbtFont">
+                                        <b>广告</b>
+                                        <span>@ad.Company</span>
+                                    </div>
+                                </a>
+                            }
+                            else if (ad.ThumbStyle == 1)
+                            {
+                                //一张小图
+                                <a href="@ad.TransferUrl">
+                                    <div class="GG_B2Left f-l">
+                                        <h3 class="GG_B1Tit">@ad.Title</h3>
+                                        <div class="GG_BbtFont">
+                                            <b>广告</b>
+                                            <span>@ad.Company</span>
+                                        </div>
+                                    </div>
+                                    <div class="GG_B2Right">
+                                        @if (ad.ThumbList.Count > 0)
+                                        {
+                                            <img src="@ad.ThumbList[0]" alt="@ad.Title" />
+                                        }
+
+                                    </div>
+                                </a>
+                            }
+                            else if (ad.ThumbStyle == 2)
+                            {
+                                //一张大图
+                                <a href="@ad.TransferUrl">
+                                    <h3 class="GG_B1Tit">@ad.Title</h3>
+                                    <div class="GG_B4Tu">
+                                        @if (ad.ThumbList.Count > 0)
+                                        {
+                                            <img src="@ad.ThumbList[0]" alt="@ad.Title" />
+                                        }
+
+                                    </div>
+                                    <div class="GG_BbtFont">
+                                        <b>广告</b>
+                                        <span>@ad.Company</span>
+                                    </div>
+                                </a>
+                            }
+                            else if (ad.ThumbStyle == 3)
+                            {
+                                <a href="@ad.TransferUrl">
+                                    <h3 class="GG_B1Tit">@ad.Title</h3>
+                                    <ul class="GG_B3Tu">
+                                        @foreach (var thumb in ad.ThumbList)
+                                        {
+                                            <li><img src="@thumb" alt="@ad.Title" /></li>
+                                        }
+
+                                        <div style="clear:both;"></div>
+                                    </ul>
+
+                                    <div class="GG_BbtFont">
+                                        <b>广告</b>
+                                        <span>@ad.Company</span>
+                                    </div>
+                                </a>
+                            }
+                            else if (ad.ThumbStyle == 4)
+                            {
+                                <a href="@ad.TransferUrl">
+                                    @if (ad.ThumbList.Count > 0)
+                                        {
+                                        <img src="@ad.ThumbList[0]" class="GG_B5Tu">
+                                    }
+
+                                </a>
+
+                            }
+
+                        </div>
+                    }
+                    else if (ad.Layer == 6 && i == 4)
+                    {
+
+                        <div class="GG_Box">
+                            @if (ad.ThumbList.Count < 1 || ad.ThumbStyle == 0)
+                            {
+                                //无图
+                                <a href="@ad.TransferUrl">
+                                    <h3 class="GG_B1Tit">@ad.Title</h3>
+                                    <div class="GG_BbtFont">
+                                        <b>广告</b>
+                                        <span>@ad.Company</span>
+                                    </div>
+                                </a>
+                            }
+                            else if (ad.ThumbStyle == 1)
+                            {
+                                //一张小图
+                                <a href="@ad.TransferUrl">
+                                    <div class="GG_B2Left f-l">
+                                        <h3 class="GG_B1Tit">@ad.Title</h3>
+                                        <div class="GG_BbtFont">
+                                            <b>广告</b>
+                                            <span>@ad.Company</span>
+                                        </div>
+                                    </div>
+                                    <div class="GG_B2Right">
+                                        @if (ad.ThumbList.Count > 0)
+                                        {
+                                            <img src="@ad.ThumbList[0]" alt="@ad.Title" />
+                                        }
+
+                                    </div>
+                                </a>
+                            }
+                            else if (ad.ThumbStyle == 2)
+                            {
+                                //一张大图
+                                <a href="@ad.TransferUrl">
+                                    <h3 class="GG_B1Tit">@ad.Title</h3>
+                                    <div class="GG_B4Tu">
+                                        @if (ad.ThumbList.Count > 0)
+                                        {
+                                            <img src="@ad.ThumbList[0]" alt="@ad.Title" />
+                                        }
+
+                                    </div>
+                                    <div class="GG_BbtFont">
+                                        <b>广告</b>
+                                        <span>@ad.Company</span>
+                                    </div>
+                                </a>
+                            }
+                            else if (ad.ThumbStyle == 3)
+                            {
+                                <a href="@ad.TransferUrl">
+                                    <h3 class="GG_B1Tit">@ad.Title</h3>
+                                    <ul class="GG_B3Tu">
+                                        @foreach (var thumb in ad.ThumbList)
+                                        {
+                                            <li><img src="@thumb" alt="@ad.Title" /></li>
+                                        }
+
+                                        <div style="clear:both;"></div>
+                                    </ul>
+
+                                    <div class="GG_BbtFont">
+                                        <b>广告</b>
+                                        <span>@ad.Company</span>
+                                    </div>
+                                </a>
+                            }
+                            else if (ad.ThumbStyle == 4)
+                            {
+                                <a href="@ad.TransferUrl">
+                                    @if (ad.ThumbList.Count > 0)
+                                        {
+                                        <img src="@ad.ThumbList[0]" class="GG_B5Tu">
+                                    }
+
+                                </a>
+
+                            }
+
+                        </div>
+                    }
+
+                }
+            }
+        }
+
+        <div class="hjc_news_content">
             @if (newse.ThumbList.Count < 1 || newse.ThumbStyle == 0)
             {
                 //无图
@@ -36,14 +396,12 @@
                             <span>@newse.CommentCount<i class="icon-comment"></i></span>
                         </div>
                     </div>
-
                     <div class="hjc_news_right">
                         @if (newse.ThumbList.Count > 0)
                         {
                             <img src="@newse.ThumbList[0]" alt="@newse.FullHead" />
                         }
                     </div>
-
                 </a>
                 <div class="clearfix"></div>
             }
@@ -108,5 +466,4 @@
         </div>
     }
 }
-
 @{Html.RenderAction("index", "PvUvIp");}
